# model-tests

./: .gitignore  data-subset.ipynb  flake.nix  gradcam.ipynb  k-fold.ipynb  onnx.ipynb  pyproject.toml  segformer.ipynb  test.ipynb
datagen/: datagen.ipynb
model-comp/: benchmark.ipynb  model-comp bce vs t.ipynb  model-final.ipynb  model-input-sizes.ipynb
tversky_tuning/: tversky_tuning.ipynb
